--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+body {
+	background-color: #111111;
+}
 /* You can add global styles to this file, and also import other style files */
