add white row in bottom of the header

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,6 +1,6 @@
-<nav class="navbar" [ngStyle]="!isResponsive ? {'margin': '20px 40px'} : {}">
+<nav class="navbar" [ngStyle]="!showIconHamburguesa ? {'margin': '20px 40px'} : {}">
     <div class="navbar__logo">
-        <img src="assets/logo.svg" alt="Logo" />
+        <img src="assets/logo-dos.svg" alt="Logo" />
         <button class="navbar__burger" type="button" aria-label="Abrir menú" (click)="showOptions()">
             <i class="fas fa-bars"></i>
         </button>
